--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# Hugo default output directory
-/public
+# Hugo default output
+public/
+resources/
+.hugo_build.lock
+
 /resources/_gen
 /assets/jsconfig.json
 hugo_stats.json
