--- a/hugo.toml
+++ b/hugo.toml
@@ -8,7 +8,7 @@ theme = 'introduction'
     showMenu                     = true                    # Show navigation menu
     showRSSButton                = false                   # Show rss button in navigation
     fadeIn                       = true                    # Turn on/off the fade-in effect
-    customJS                     = ["js/theme-toggle.js", "js/music-toggle.js"]  # Include custom JavaScript files placed under assets/
+    customJS                     = ["js/theme-toggle.js", "js/music-toggle.js", "js/typewriter.js"]  # Include custom JavaScript files placed under assets/
     dateFormat                   = "Jan 2, 2006"
     email                        = "youremail@email.com"   # E-mail address for contact section
     
